# jmt

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml
jmt/: __init__.py  __main__.py
nix/: checks.nix  formatter.nix  shell.nix
