[project]
name = "jmt"
version = "0.1.0"
description = "Generate jj fix config from flake's treefmt formatter"
requires-python = ">=3.11"
license = "MIT"
keywords = ["nix", "jujutsu", "treefmt", "formatter"]

[project.scripts]
jmt = "jmt:main"

[project.urls]
Homepage = "https://github.com/mulatta/jmt"
Repository = "https://github.com/mulatta/jmt"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jmt*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "RUF", # ruff-specific
]
ignore = ["E501"] # line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["jmt"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tomli"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
